--- a/.env.sample
+++ b/.env.sample
@@ -20,6 +20,8 @@ ADMIN_PASSWORD=admin
 CACHE_ENABLED=true
 CACHE_STORE=redis
 
+CONTENT_SECURITY_POLICY__DIRECTIVES__IMG_SRC=["example.com"]
+
 TELEMETRY=false
 
 # https://docs.directus.io/self-hosted/config-options.html#redis
