--- a/.env.sample
+++ b/.env.sample
@@ -18,8 +18,8 @@ ADMIN_PASSWORD=admin
 
 # https://docs.directus.io/self-hosted/config-options.html#cors
 CORS_ENABLED=true
-CORS_ORIGIN="http://localhost:3000,http://127.0.0.1:3000,https://yuewu.dev,https://www.yuewu.dev,https://nextus.vercel.app"
-
+CORS_ORIGIN="http://localhost:3000,http://127.0.0.1:3000"
+CORS_ORIGIN=["http://localhost:3000","http://127.0.0.1:3000"]
 # https://docs.directus.io/self-hosted/config-options.html#cache
 CACHE_ENABLED=true
 CACHE_STORE=redis
