supabase storage example

--- a/.env.sample
+++ b/.env.sample
@@ -18,7 +18,6 @@ ADMIN_PASSWORD=admin
 
 # https://docs.directus.io/self-hosted/config-options.html#cors
 CORS_ENABLED=true
-CORS_ORIGIN="http://localhost:3000,http://127.0.0.1:3000"
 CORS_ORIGIN=["http://localhost:3000","http://127.0.0.1:3000"]
 # https://docs.directus.io/self-hosted/config-options.html#cache
 CACHE_ENABLED=true
@@ -34,6 +33,18 @@ REDIS='redis://cache:6379'
 
 # https://docs.directus.io/self-hosted/config-options.html#file-storage
 STORAGE_LOCATIONS="local"
+
+
+# multiple storage example
+# STORAGE_LOCATIONS="supabase,local"
+
+# STORAGE_LOCAL_DRIVER="local"
+# STORAGE_SUPABASE_ROOT=myfolder
+# STORAGE_SUPABASE_DRIVER=supabase
+# STORAGE_SUPABASE_SERVICE_ROLE=tobemodified
+# STORAGE_SUPABASE_BUCKET=tobemodified
+# STORAGE_SUPABASE_PROJECT_ID=tobemodified
+
 
 # database service (https://docs.directus.io/self-hosted/config-options.html#database) 
 # DB_CONNECTION_STRING=
