update: env sample

--- a/.env.sample
+++ b/.env.sample
@@ -23,7 +23,9 @@ CORS_ORIGIN=["http://localhost:3000","http://127.0.0.1:3000"]
 CACHE_ENABLED=true
 CACHE_STORE=redis
 
-CONTENT_SECURITY_POLICY__DIRECTIVES__IMG_SRC=["example.com"]
+CONTENT_SECURITY_POLICY_DIRECTIVES__IMG_SRC=array:'self',data:,blob:,example.com,otherexample.com
+CONTENT_SECURITY_POLICY_DIRECTIVES__SCRIPT_SRC=array:'self','unsafe-eval','unsafe-inline'
+
 
 TELEMETRY=false
 
