disable cache for now.

--- a/.env.sample
+++ b/.env.sample
@@ -20,7 +20,8 @@ ADMIN_PASSWORD=admin
 CORS_ENABLED=true
 CORS_ORIGIN=["http://localhost:3000","http://127.0.0.1:3000"]
 # https://docs.directus.io/self-hosted/config-options.html#cache
-CACHE_ENABLED=true
+# currently, enable cache may causing problems.
+CACHE_ENABLED=false
 CACHE_STORE=redis
 
 CONTENT_SECURITY_POLICY_DIRECTIVES__IMG_SRC=array:'self',data:,blob:,example.com,otherexample.com
