Squashed commit of the following:
commit e1490be7f47b2e8bce237057743b6c2038d775f3
Author: luochuanyuewu <luochuanyuewu@gmail.com>
Date:   Thu Oct 26 18:14:30 2023 +0800

    update schema

commit fca8e542d4311f841c209965d984bf71b4ef998f
Author: luochuanyuewu <luochuanyuewu@gmail.com>
Date:   Tue Oct 10 23:46:40 2023 +0800

    new: help multilang

commit da66640c2c45cd8a3e65bd25385c5dcc86077e6c
Author: luochuanyuewu <luochuanyuewu@gmail.com>
Date:   Wed Oct 4 15:46:43 2023 +0800

    update schema

commit 892751d509113e81a9fecdd636c0512662020ebc
Merge: 89a8884 11b33ab
Author: luochuanyuewu <luochuanyuewu@gmail.com>
Date:   Wed Oct 4 11:13:19 2023 +0800

    Merge branch 'main' into workspace

commit 89a888446f4d7dfc2acb8e7863671b3485f42648
Author: luochuanyuewu <luochuanyuewu@gmail.com>
Date:   Wed Oct 4 11:11:08 2023 +0800

    update version

commit c07c2d44935b6079876d2f23e7610b8c0ee28187
Author: luochuanyuewu <luochuanyuewu@gmail.com>
Date:   Mon Sep 25 23:20:30 2023 +0800

    up

commit 4a650260c8c260c4e50cbd9212b6f810077b1012
Author: luochuanyuewu <luochuanyuewu@gmail.com>
Date:   Mon Sep 25 23:12:08 2023 +0800

    dummy extension

commit 722cb612d8d8821a62695e236a085d5e2186f537
Author: luochuanyuewu <luochuanyuewu@gmail.com>
Date:   Mon Sep 25 22:54:26 2023 +0800

    initial

--- a/docker-build.yml
+++ b/docker-build.yml
@@ -9,7 +9,7 @@ services:
       args:
         - DOCKER_DIRECTUS_VERSION=${DOCKER_DIRECTUS_VERSION}
     container_name: ${DOCKER_DIRECTUS_CONTAINER_NAME}
-    image: nextus:${DOCKER_DIRECTUS_VERSION}
+    image: ${DOCKER_DIRECTUS_CUSTOM_IMAGE_NAME}:${DOCKER_DIRECTUS_VERSION}
     ports:
       - 8055:8055
     volumes:
